--- a/app/scss/components/_house-main.scss
+++ b/app/scss/components/_house-main.scss
@@ -32,3 +32,47 @@
 	}
 }
 
+.hero {
+    position:relative;
+    width:100%;
+    height:400px
+}
+.hero__background {
+    position:absolute;
+    bottom:0;
+    left:0;
+    overflow:hidden;
+    right:0;
+    top:0;
+}
+.hero-slideshow {
+    height:100%;
+    width:100%;
+}
+.hero__content {
+    position:relative;
+    color:#fff;
+    z-index:2;
+    height:400px;
+    width:auto;
+}
+.hero__content-footer {
+    position:absolute;
+    background-color:rgba(0,0,0,0.6);
+    bottom:0px;
+    left:0px;
+    right:0px;
+    padding-top:30px;
+    padding-bottom:30px;
+}
+
+@media (min-width: $screen-sm-min) {
+    .hero {
+        height:600px;
+    }
+    .hero__content {
+        height:550px;
+        padding-bottom:104px;
+        top:50px;
+    }
+}
