add Input, SearchBar.

--- a/app/scss/common.scss
+++ b/app/scss/common.scss
@@ -97,3 +97,20 @@
   font-size:60px;
   font-weight:700;
 }
+
+
+/******************************
+ * new simple style widgets.
+ ******************************/
+
+.screen-reader-only {
+    border: 0px none;
+    clip: rect(0px, 0px, 0px, 0px);
+    width:1px;
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0px;
+    position: absolute;
+}
+
