modify Carousel, use ResponsiveImage+SimpleCarousel+ListingPanel instead of SimpleCarousel

--- a/app/scss/common.scss
+++ b/app/scss/common.scss
@@ -217,3 +217,76 @@
 }
 
 
+.responsive-imgwh {
+    max-height:100%;
+    max-width:100%;
+}
+.responsive-imgw {
+    width:100%;
+    height:auto;
+}
+.responsive-imgh {
+    height:100%;
+    width:auto;
+}
+.responsive-img-wrapper {
+    position:absolute;
+    height:100%;
+    width:100%;
+    text-align:center;
+}
+.responsive-img-outer {
+    position:relative;
+    padding-bottom:67%;
+    width:100%;
+}
+
+.carousel-windctrl {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  height:100%;
+  width:25%;
+  font-size: 20px;
+  color: #fff;
+  text-align: center;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
+  background-color: rgba(0, 0, 0, 0);
+  filter: alpha(opacity=50);
+  opacity: .5;
+}
+.carousel-windctrl > .glyphicon {
+	position:absolute;
+	top:50%;
+	margin-top:-22px
+}
+.carousel-windctrl.prev {
+	left:0;
+    .glyphicon {
+        left:10px;
+    }
+}
+
+.carousel-windctrl.next {
+	right:0;
+	left:auto;
+    .glyphicon {
+        right:10px;
+    }
+}
+@media (min-width: $screen-sm-min) {
+	.carousel-windctrl {
+		display:none;
+		transition:opacity 0.1s ease-in-out
+	}
+	.carousel-wind-main:hover .carousel-windctrl {
+		display:block;
+		background-color:rgba(0,0,0,0.05);
+		/*opacity:0.8*/
+	}
+	.carousel-wind-main:hover .carousel-windctrl:hover {
+		background-color:rgba(0,0,0,0.2);
+		/*opacity:1.0*/
+	}
+}
